--- a/catalog.html
+++ b/catalog.html
@@ -45,84 +45,87 @@
         </div>
       </header>
       <main class="main-inner">
-        <header class="inner-header">
-          <h1 class="inner-header-title">Гостиницы Седоны</h1>
-          <ul class="breadcrumbs">
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link" href="index.html"><img class="img breadcrumbs-link-icon" style="height: 12px; width: 12px;"
-                 src="img/catalog-breadcrum/catalog_breadcrum.svg" alt="На главную"></a>
-            </li>
-            <li class="breadcrumbs-item">
-              <img style="width: 6px; height: 10px;" class="img" src="img/catalog-breadcrum/Vector.svg">
-            </li>
-            <li class="breadcrumbs-item">
-              <a class="breadcrumbs-link">Гостиницы</a>
-            </li>
-          </ul>
-        </header>
-        <section class="catalog-filter">
-          <h2 class="visually-hidden">Список гостиниц </h2>
-          <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Инфраструктура:</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="pool" checked>
-                    Бассейн
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="parking" checked>
-                    Парковка
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="checkbox" name="wi-fi">
-                    Wi-Fi
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="catalog-filter-group">
-              <legend class="catalog-filter-title">Тип Жилья</legend>
-              <ul class="catalog-filter-list">
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="radio" name="type of housing " value="hotel" checked>
-                    Гостиница
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="radio" name="type of housing" value="motel">
-                    Мотель
-                  </label>
-                </li>
-                <li class="catalog-filter-item">
-                  <label class="control">
-                    <input class="control-input" type="radio" name="type of housing" value="apartments">
-                    Апартаменты
-                  </label>
-                </li>
-              </ul>
-            </fieldset>
-            <fieldset class="catalog-filter-prise">
-              <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-              <label class="prise">
-                <input type="number" name="min-prise" value="0">
-              </label>
-              <label class="prise">
-                <input type="number" name="max-prise" value="9000">
-              </label>
-            </fieldset>
-            <button class="button-apply" type="submit">Применить
-            </button>
-            <button class="button-reset" type="submit">Сбросить
-            </button>
-          </form>
+        <section class="inner_header">
+          <div class="inner-header">
+            <h1 class="inner-header-title">Гостиницы Седоны</h1>
+            <ul class="breadcrumbs">
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link" href="index.html"><img class="img breadcrumbs-link-icon"
+                    style="height: 12px; width: 12px;" src="img/catalog-breadcrum/catalog_breadcrum.svg"
+                    alt="На главную"></a>
+              </li>
+              <li class="breadcrumbs-item">
+                <img style="width: 6px; height: 10px;" class="img" src="img/catalog-breadcrum/Vector.svg">
+              </li>
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link">Гостиницы</a>
+              </li>
+            </ul>
+          </div>
+          <div class="catalog-filter">
+            <h2 class="visually-hidden">Список гостиниц </h2>
+            <form class="catalog-filter-form" action="https://echo.htmlacademy.ru/" method="get">
+              <fieldset class="catalog-filter-group">
+                <legend class="catalog-filter-title">Инфраструктура:</legend>
+                <ul class="catalog-filter-list">
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="checkbox" name="pool" checked>
+                      Бассейн
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="checkbox" name="parking" checked>
+                      Парковка
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="checkbox" name="wi-fi">
+                      Wi-Fi
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="catalog-filter-group">
+                <legend class="catalog-filter-title">Тип Жилья</legend>
+                <ul class="catalog-filter-list">
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="radio" name="type of housing " value="hotel" checked>
+                      Гостиница
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="radio" name="type of housing" value="motel">
+                      Мотель
+                    </label>
+                  </li>
+                  <li class="catalog-filter-item">
+                    <label class="control">
+                      <input class="control-input" type="radio" name="type of housing" value="apartments">
+                      Апартаменты
+                    </label>
+                  </li>
+                </ul>
+              </fieldset>
+              <fieldset class="catalog-filter-prise">
+                <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+                <label class="prise">
+                  <input type="number" name="min-prise" value="0">
+                </label>
+                <label class="prise">
+                  <input type="number" name="max-prise" value="9000">
+                </label>
+              </fieldset>
+              <button class="button-apply" type="submit">Применить
+              </button>
+              <button class="button-reset" type="submit">Сбросить
+              </button>
+            </form>
+          </div>
         </section>
 
         <section class="catalog-sorting">
@@ -139,7 +142,7 @@
           <ul class="hotels-card-list">
             <li class="hotels-card-item">
               <a href="#">
-                <img src="img/hotels/Amara_Resort_&_Spa.jpg" width="300"  height="212" alt="">
+                <img src="img/hotels/Amara_Resort_&_Spa.jpg" width="300" height="212" alt="">
                 <h3 class="card-item-title">Amara Resort & Spa</h3>
               </a>
               <span class="hotels-card-type">Гостиница</span>
@@ -213,24 +216,27 @@
         </section>
 
       </main>
-       <footer class="page-footer">
+      <footer class="page-footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <span class="visually-hidden">Вконтакте</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14"
+                alt="ВКонтакте"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">Telegram</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15" alt="Telegram"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15"
+                alt="Telegram"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">YouTube</span>
-            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17" alt="YouTube"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17"
+                alt="YouTube"></a>
           </li>
         </ul>
         <a class="phone" href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img class="img img-academy"  src="img/HTML_Academy.png" width="115" height="33"
-            alt="HTML Academy"></a>
+        <a href="https://htmlacademy.ru/"><img class="img img-academy" src="img/HTML_Academy.png" width="115"
+            height="33" alt="HTML Academy"></a>
       </footer>
     </div>
   </body>
