--- a/index.html
+++ b/index.html
@@ -61,38 +61,44 @@
 
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
-          <div class="advantages-photo-right">
-            <div class="advantages-item-right">
-              <h3 class="advantages-title-right">Настоящий городок</h3>
-              <p class="advantages-description-right">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <div class="advantages-first">
+            <div class="advantages-item-first">
+              <h3 class="advantages-title-first">Настоящий городок</h3>
+              <hr class="advantages-title-divider" />
+              <p class="advantages-description-first">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="advantages-item-photo">
-              <img src="img/house_and_rock.jpg" width="800" height="100%" alt="Домики на фоне скал в городе Седона">
+              <img class="img" src="img/house_and_rock.jpg" width="800" height="385" alt="Домики на фоне скал в городе Седона">
             </div>
           </div>
 
           <ul class="advantages-list">
             <li class="advantages-list-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
+              <hr class="advantages-title-divider" />
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-list-item">
               <h3 class="advantages-title">Красивая дорога</h3>
+              <hr class="advantages-title-divider" />
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-list-item">
               <h3 class="advantages-title">Мало туристов</h3>
+              <hr class="advantages-title-divider" />
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ul>
 
-          <section class="advantages-photo-left">
-            <div class="advantages-item-left">
-              <h3 class="advantages-title-left">Там есть мост дьявола</h3>
-              <p class="advantages-description-left">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          <section class="advantages-last">
+            <div class="advantages-item-last">
+              <h3 class="advantages-title-last">Там есть мост дьявола</h3>
+              <hr class="advantages-title-divider" />
+              <p class="advantages-description-last">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <div class="advantages-item-photo">
-              <img src="img/the_devil's_bridge.jpg" width="800" height="100%" alt="Мост дьявола">
+              <img class="img
+              " src="img/the_devil's_bridge.jpg" width="800" height="385" alt="Мост дьявола">
             </div>
           </section>
         </section>
